--- a/src/components/Feed/feed.css
+++ b/src/components/Feed/feed.css
@@ -10,3 +10,10 @@
   height: 35rem;
   object-fit: cover;
 }
+
+.image-button {
+  position: relative;
+  left: 270px;
+  top: -40px;
+  font-size: 200%;
+}
